--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <title>MineSweeper</title>
     </head>
     <body>
+        <div id='content'>
+            <h1>Mine-Sweeper Game</h1>
         <table id='board'></table>
-
+        <div id = 'score'></div>
+    </div>
     </body>
 </html>
