reset feature added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h1>Mine-Sweeper Game</h1>
         <table id='board'></table>
         <div id = 'score'></div>
+        <button id='reset'>Reset</button>
     </body>
 </html>
